--- a/docs/UML/classes/resume_type.adoc
+++ b/docs/UML/classes/resume_type.adoc
@@ -23,4 +23,8 @@ a|Retry the dispatch in the same thread of control.
 h|
 |new_thread
 a|Recommence as a new thread of execution at `_restart_location_`.
+
+h|
+|resume_next
+a|Resume at the next Task.
 |===
