--- a/docs/UML/classes/callback_wait.adoc
+++ b/docs/UML/classes/callback_wait.adoc
@@ -1,15 +1,15 @@
-=== CALLBACK_LISTENER Class
+=== CALLBACK_WAIT Class
 
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*CALLBACK_LISTENER*
+2+^h|*CALLBACK_WAIT*
 
 h|*Description*
 2+a|
 
 h|*Inherit*
-2+|`EVENT_LISTENER`
+2+|`EVENT_WAIT`
 
 h|*Attributes*
 ^h|*Signature*
