--- a/docs/UML/classes/condition_group.adoc
+++ b/docs/UML/classes/condition_group.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*CONDITION_GROUP*
 
 h|*Description*
-2+a|Special kind of Task Group whose members are all `CONDITION_BRANCH` instances, each of which represents a conditional expression based on context variables.
+2+a|Special kind of Task Group whose members are all `CONDITION_BRANCH` instances, each of which represents a conditional expression based on context variables. Member branches are evaluated in order, which enables overlapping conditions as well as a final 'match-any' branch with a test expression of `True` to be used if needed.
 
 This structure is the equivalent of a programming if/then/else statement.
 
