--- a/docs/UML/classes/decision_branch.adoc
+++ b/docs/UML/classes/decision_branch.adoc
@@ -16,8 +16,8 @@ h|*Attributes*
 ^h|*Meaning*
 
 h|*1..1*
-|*range*: `Any`
-a|
+|*value_constraint*: `Any`
+a|Constraint on result value of the owning Decision Group `_test_` expression, for this branch.
 
 h|*Invariants*
 2+a|*_Inv_no_wait_condition_*: `wait_spec = Void`
