--- a/docs/UML/classes/timeline_moment.adoc
+++ b/docs/UML/classes/timeline_moment.adoc
@@ -15,11 +15,11 @@ h|*Attributes*
 ^h|*Signature*
 ^h|*Meaning*
 
-h|*1..1*
-|*variable_time*: `Duration`
+h|*0..1*
+|*timeline_offset*: `Duration`
 a|Variable part of time specification, expressed as an offset from the zero time point of the Task Plan. Converted to absolute time at activation.
 
 h|*0..1*
-|*fixed_time*: `Time`
+|*fixed_time*: `TIME_SPECIFIER`
 a|Fixed time specification, to be added to variable time when the latter is converted to absolute time at activation. Used to expressed fixed hours in the day, when the day is movable.
 |===
