--- a/docs/UML/classes/work_plan.adoc
+++ b/docs/UML/classes/work_plan.adoc
@@ -46,7 +46,7 @@ h|*1..1*
 a|Global timeline of Work Plan, on which Tasks with planned times can be listed.
 
 h|*0..1*
-|*events*: `List<EVENT_LISTENER>`
+|*events*: `List<EVENT_WAIT>`
 a|List of Event Wait instances in this Plan.
 
 h|*0..1*
@@ -54,7 +54,7 @@ h|*0..1*
 a|
 
 h|*0..1*
-|*listeners*: `List<EVENT_LISTENER>`
+|*event_wait_states*: `List<EVENT_WAIT>`
 a|Reference list of all defined Event Listeners.
 
 h|*1..1 +
